// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/pages/users/PlayStatus.vue { locale: "en" } snapshot test renders graphs correctly 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Groove Radar" class="card-header is-primary">
        <div class="card-header-title">Groove Radar</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Groove Radar" class="collapse-content" style="display: none;">
        <div class="card-content">
          <grooveradar-stub chart="[object Object]" class="radar"></grooveradar-stub>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Clear Status" class="card-header is-primary">
        <div class="card-header-title">Clear Status</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Clear Status" class="collapse-content" style="display: none;">
        <div class="card-content">
          <!---->
          <div class="carousel">
            <!---->
            <div class="carousel-items">
              <transition-stub name="slide-next">
                <div class="carousel-item" style="">
                  <clearstatus-stub title="ALL" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="1" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="2" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="3" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="4" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="5" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="6" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="7" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="8" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="9" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="10" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="11" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="12" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="13" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="14" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="15" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="16" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="17" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="18" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="19" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <div class="carousel-arrow"><span class="icon has-icons-left"><i class="mdi mdi-chevron-left mdi-24px"></i></span><span class="icon has-icons-right"><i class="mdi mdi-chevron-right mdi-24px"></i></span></div>
            </div>
            <!---->
            <!---->
            <div class="carousel-indicator has-custom is-small"><a class="indicator-item is-active"><button type="button" disabled="disabled" class="button is-small">
                  <!----><span>
            ALL
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            1
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            2
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            3
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            4
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            5
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            6
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            7
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            8
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            9
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            10
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            11
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            12
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            13
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            14
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            15
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            16
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            17
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            18
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            19
          </span>
                  <!---->
                </button></a></div>
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Score Status" class="card-header is-primary">
        <div class="card-header-title">Score Status</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Score Status" class="collapse-content" style="display: none;">
        <div class="card-content">
          <!---->
          <div class="carousel">
            <!---->
            <div class="carousel-items">
              <transition-stub name="slide-next">
                <div class="carousel-item" style="">
                  <scorestatus-stub title="ALL" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="1" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="2" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="3" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="4" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="5" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="6" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="7" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="8" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="9" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="10" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="11" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="12" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="13" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="14" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="15" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="16" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="17" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="18" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="19" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <div class="carousel-arrow"><span class="icon has-icons-left"><i class="mdi mdi-chevron-left mdi-24px"></i></span><span class="icon has-icons-right"><i class="mdi mdi-chevron-right mdi-24px"></i></span></div>
            </div>
            <!---->
            <!---->
            <div class="carousel-indicator has-custom is-small"><a class="indicator-item is-active"><button type="button" disabled="disabled" class="button is-small">
                  <!----><span>
            ALL
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            1
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            2
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            3
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            4
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            5
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            6
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            7
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            8
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            9
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            10
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            11
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            12
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            13
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            14
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            15
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            16
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            17
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            18
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            19
          </span>
                  <!---->
                </button></a></div>
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/users/PlayStatus.vue { locale: "en" } snapshot test renders loading state before fetch() 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Groove Radar" class="card-header is-primary">
        <div class="card-header-title">Groove Radar</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Groove Radar" class="collapse-content" style="display: none;">
        <div class="card-content">
          <transition-stub name="fade">
            <!---->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Clear Status" class="card-header is-primary">
        <div class="card-header-title">Clear Status</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Clear Status" class="collapse-content" style="display: none;">
        <div class="card-content">
          <transition-stub name="fade">
            <!---->
          </transition-stub>
          <div class="content has-text-grey has-text-centered">
            <p>No Data</p>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Score Status" class="card-header is-primary">
        <div class="card-header-title">Score Status</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Score Status" class="collapse-content" style="display: none;">
        <div class="card-content">
          <transition-stub name="fade">
            <!---->
          </transition-stub>
          <div class="content has-text-grey has-text-centered">
            <p>No Data</p>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/users/PlayStatus.vue { locale: "en" } snapshot test renders no data if empty 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Groove Radar" class="card-header is-primary">
        <div class="card-header-title">Groove Radar</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Groove Radar" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="content has-text-grey has-text-centered">
            <p>No Data</p>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Clear Status" class="card-header is-primary">
        <div class="card-header-title">Clear Status</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Clear Status" class="collapse-content" style="display: none;">
        <div class="card-content">
          <!---->
          <div class="content has-text-grey has-text-centered">
            <p>No Data</p>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Score Status" class="card-header is-primary">
        <div class="card-header-title">Score Status</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Score Status" class="collapse-content" style="display: none;">
        <div class="card-content">
          <!---->
          <div class="content has-text-grey has-text-centered">
            <p>No Data</p>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/users/PlayStatus.vue { locale: "ja" } snapshot test renders graphs correctly 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="グルーブレーダー" class="card-header is-primary">
        <div class="card-header-title">グルーブレーダー</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="グルーブレーダー" class="collapse-content" style="display: none;">
        <div class="card-content">
          <grooveradar-stub chart="[object Object]" class="radar"></grooveradar-stub>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="クリア状況" class="card-header is-primary">
        <div class="card-header-title">クリア状況</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="クリア状況" class="collapse-content" style="display: none;">
        <div class="card-content">
          <!---->
          <div class="carousel">
            <!---->
            <div class="carousel-items">
              <transition-stub name="slide-next">
                <div class="carousel-item" style="">
                  <clearstatus-stub title="ALL" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="1" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="2" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="3" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="4" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="5" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="6" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="7" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="8" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="9" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="10" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="11" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="12" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="13" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="14" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="15" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="16" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="17" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="18" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <clearstatus-stub title="19" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
                </div>
              </transition-stub>
              <div class="carousel-arrow"><span class="icon has-icons-left"><i class="mdi mdi-chevron-left mdi-24px"></i></span><span class="icon has-icons-right"><i class="mdi mdi-chevron-right mdi-24px"></i></span></div>
            </div>
            <!---->
            <!---->
            <div class="carousel-indicator has-custom is-small"><a class="indicator-item is-active"><button type="button" disabled="disabled" class="button is-small">
                  <!----><span>
            ALL
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            1
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            2
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            3
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            4
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            5
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            6
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            7
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            8
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            9
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            10
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            11
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            12
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            13
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            14
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            15
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            16
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            17
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            18
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            19
          </span>
                  <!---->
                </button></a></div>
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="スコア状況" class="card-header is-primary">
        <div class="card-header-title">スコア状況</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="スコア状況" class="collapse-content" style="display: none;">
        <div class="card-content">
          <!---->
          <div class="carousel">
            <!---->
            <div class="carousel-items">
              <transition-stub name="slide-next">
                <div class="carousel-item" style="">
                  <scorestatus-stub title="ALL" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="1" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="2" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="3" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="4" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="5" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="6" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="7" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="8" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="9" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="10" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="11" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="12" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="13" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="14" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="15" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="16" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="17" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="18" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <transition-stub name="slide-next">
                <div class="carousel-item" style="display: none;">
                  <scorestatus-stub title="19" statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></scorestatus-stub>
                </div>
              </transition-stub>
              <div class="carousel-arrow"><span class="icon has-icons-left"><i class="mdi mdi-chevron-left mdi-24px"></i></span><span class="icon has-icons-right"><i class="mdi mdi-chevron-right mdi-24px"></i></span></div>
            </div>
            <!---->
            <!---->
            <div class="carousel-indicator has-custom is-small"><a class="indicator-item is-active"><button type="button" disabled="disabled" class="button is-small">
                  <!----><span>
            ALL
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            1
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            2
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            3
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            4
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            5
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            6
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            7
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            8
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            9
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            10
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            11
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            12
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            13
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            14
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            15
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            16
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            17
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            18
          </span>
                  <!---->
                </button></a><a class="indicator-item"><button type="button" class="button is-small">
                  <!----><span>
            19
          </span>
                  <!---->
                </button></a></div>
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/users/PlayStatus.vue { locale: "ja" } snapshot test renders loading state before fetch() 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="グルーブレーダー" class="card-header is-primary">
        <div class="card-header-title">グルーブレーダー</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="グルーブレーダー" class="collapse-content" style="display: none;">
        <div class="card-content">
          <transition-stub name="fade">
            <!---->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="クリア状況" class="card-header is-primary">
        <div class="card-header-title">クリア状況</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="クリア状況" class="collapse-content" style="display: none;">
        <div class="card-content">
          <transition-stub name="fade">
            <!---->
          </transition-stub>
          <div class="content has-text-grey has-text-centered">
            <p>データがありません</p>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="スコア状況" class="card-header is-primary">
        <div class="card-header-title">スコア状況</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="スコア状況" class="collapse-content" style="display: none;">
        <div class="card-content">
          <transition-stub name="fade">
            <!---->
          </transition-stub>
          <div class="content has-text-grey has-text-centered">
            <p>データがありません</p>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/users/PlayStatus.vue { locale: "ja" } snapshot test renders no data if empty 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="グルーブレーダー" class="card-header is-primary">
        <div class="card-header-title">グルーブレーダー</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="グルーブレーダー" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="content has-text-grey has-text-centered">
            <p>データがありません</p>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="クリア状況" class="card-header is-primary">
        <div class="card-header-title">クリア状況</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="クリア状況" class="collapse-content" style="display: none;">
        <div class="card-content">
          <!---->
          <div class="content has-text-grey has-text-centered">
            <p>データがありません</p>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="スコア状況" class="card-header is-primary">
        <div class="card-header-title">スコア状況</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="スコア状況" class="collapse-content" style="display: none;">
        <div class="card-content">
          <!---->
          <div class="content has-text-grey has-text-centered">
            <p>データがありません</p>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;
